Add git ignore of ruby mine ideas.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@
 
 #Ignore coverage folder
 /coverage/*
+.idea/.name
+.idea/FlowList.iml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/scopes/scope_settings.xml
+.idea/vcs.xml
+.idea/workspace.xml
