--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: ruby
-rvm:
-  - 1.9.3
-before_script:
-  - "sh -e /etc/init.d/xvfb start"
-  - "export DISPLAY=:99.0"
-  - "export JASMINE_SPEC_FORMAT=documentation"
+rbenv:
+  - 2.2.0
 script:
-  - "bundle exec rake travis:run"
+  - "bundle exec rake db:create"
+  - "bundle exec rake db:migrate RAILS_ENV=test"
+  - "bundle exec rspec spec"
 env:
   - PG_USERNAME='postgres'
